# Tython

./: Cargo.toml  README.md  TODO.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
runtime/: builtins.c  bytearray.c  bytes.c  exception.c  exception.cpp  list.c  main.cpp  runtime.c  str.c  tython.h
runtime/builtins/: builtins.h  common.h  core.c  core.cpp  core.h  math.c  math.cpp  math.h  print.c  print.cpp  print.h
runtime/bytearray/: bytearray.c  bytearray.cpp  bytearray.h
runtime/bytes/: bytes.c  bytes.cpp  bytes.h
runtime/dict/: dict.cpp  dict.h
runtime/gc/: gc.h  gc_boehm.cpp  gc_naive.cpp
runtime/internal/: buf.h  vec.h
runtime/list/: list.c  list.cpp  list.h
runtime/set/: set.cpp  set.h
runtime/str/: str.c  str.cpp  str.h
scripts/: build_tcmalloc.sh  cmin.sh  install-hooks.sh  llvm-cov.sh  pre-commit
src/: compiler.rs  errors.rs  lib.rs  main.rs  python_ast.rs  resolver.rs  symbol_table.rs
src/ast/: convert.rs  expr.rs  mod.rs  stmt.rs  types.rs
src/codegen/: context.rs  exceptions.rs  expr.rs  expressions.rs  function.rs  helpers_calls.rs  helpers_flow.rs  helpers_types.rs  mod.rs  runtime_fn.rs  statements.rs
src/tir/: builder.rs  builtin.rs  lower.rs  mod.rs  type_rules.rs
src/typeinfer/: context.rs  infer.rs  mod.rs
stdlib/: math.py  random.py
tests/: integration_test.rs  main.py  test_helper.py  test_imports.py  test_simple.py
tests/algorithm/: test_advanced_data_structures.py  test_algorithm.py  test_balanced_tree_structures.py  test_data_structures.py  test_graph_algorithms.py  (+11 more)
(+1409 files in other folders)
